Closed Bug 1777968 Opened 3 years ago Closed 3 years ago

Perma Mingw-clang [tier 2] /builds/worker/checkouts/gecko/netwerk/base/nsServerSocket.cpp:22:12: fatal error: 'Winsock2.h' file not found

Categories

(Core :: Networking, defect, P2)

defect

Tracking

()

RESOLVED FIXED
104 Branch
Tracking Status
firefox-esr91 --- unaffected
firefox-esr102 --- unaffected
firefox102 --- unaffected
firefox103 --- unaffected
firefox104 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: kershaw)

References

(Regression)

Details

(Keywords: intermittent-failure, regression, Whiteboard: [stockwell needswork:owner][necko-triaged])

Attachments

(1 file)

Filed by: bszekely [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=383286075&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/cW5N8FawSRy4uyzCd3OplA/runs/0/artifacts/public/logs/live_backing.log


[task 2022-07-04T12:56:05.574Z] 12:56:05     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/netwerk/base'
[task 2022-07-04T12:56:05.577Z] 12:56:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o Unified_cpp_netwerk_base3.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/workspace/obj-build/netwerk/base -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/netwerk/dns -I/builds/worker/checkouts/gecko/netwerk/protocol/http -I/builds/worker/checkouts/gecko/netwerk/socket -I/builds/worker/checkouts/gecko/netwerk/url-classifier -I/builds/worker/checkouts/gecko/security/manager/ssl -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wenum-compare-conditional -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_netwerk_base3.o.pp   Unified_cpp_netwerk_base3.cpp
[task 2022-07-04T12:56:05.577Z] 12:56:05     INFO -  In file included from Unified_cpp_netwerk_base3.cpp:56:
[task 2022-07-04T12:56:05.577Z] 12:56:05     INFO -  /builds/worker/checkouts/gecko/netwerk/base/nsServerSocket.cpp:22:12: fatal error: 'Winsock2.h' file not found
[task 2022-07-04T12:56:05.578Z] 12:56:05     INFO -  #  include <Winsock2.h>
[task 2022-07-04T12:56:05.578Z] 12:56:05     INFO -             ^~~~~~~~~~~~
[task 2022-07-04T12:56:05.578Z] 12:56:05     INFO -  1 error generated.
[task 2022-07-04T12:56:05.578Z] 12:56:05    ERROR -  gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:669: Unified_cpp_netwerk_base3.o] Error 1
[task 2022-07-04T12:56:05.579Z] 12:56:05     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/netwerk/base'
[task 2022-07-04T12:56:05.579Z] 12:56:05     INFO -  gmake[4]: *** Waiting for unfinished jobs....
[task 2022-07-04T12:56:05.655Z] 12:56:05     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/toolkit/library'
[task 2022-07-04T12:56:05.655Z] 12:56:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o buildid.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/toolkit/library -I/builds/worker/workspace/obj-build/toolkit/library -I/builds/worker/checkouts/gecko/config -I/builds/worker/checkouts/gecko/widget/windows -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wenum-compare-conditional -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/buildid.o.pp   buildid.cpp
[task 2022-07-04T12:56:05.655Z] 12:56:05     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/toolkit/library'
[task 2022-07-04T12:56:05.672Z] 12:56:05     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavutil'
[task 2022-07-04T12:56:05.673Z] 12:56:05     INFO -  mkdir -p '.deps/'
[task 2022-07-04T12:56:05.673Z] 12:56:05     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavutil'
[task 2022-07-04T12:56:05.688Z] 12:56:05     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/netwerk/base'
[task 2022-07-04T12:56:05.688Z] 12:56:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang++ -std=gnu++17 -o Unified_cpp_netwerk_base4.o -c  -I/builds/worker/workspace/obj-build/dist/stl_wrappers -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DUNICODE -D_UNICODE -D_CRT_RAND_S -DCERT_CHAIN_PARA_HAS_EXTRA_FIELDS -D_SECURE_ATL -DCHROMIUM_BUILD -DU_STATIC_IMPLEMENTATION -DOS_WIN=1 -DWIN32 -D_WIN32 -D_WINDOWS -DWIN32_LEAN_AND_MEAN -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/workspace/obj-build/netwerk/base -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/netwerk/dns -I/builds/worker/checkouts/gecko/netwerk/protocol/http -I/builds/worker/checkouts/gecko/netwerk/socket -I/builds/worker/checkouts/gecko/netwerk/url-classifier -I/builds/worker/checkouts/gecko/security/manager/ssl -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Qunused-arguments -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wdeprecated-this-capture -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wc++2a-compat -Wcomma -Wenum-compare-conditional -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Wno-psabi -Wthread-safety -Wno-unknown-warning-option -fno-sized-deallocation -fno-aligned-new -fms-extensions -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -fno-exceptions -Wno-incompatible-ms-struct -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/Unified_cpp_netwerk_base4.o.pp   Unified_cpp_netwerk_base4.cpp
[task 2022-07-04T12:56:05.689Z] 12:56:05     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/netwerk/base'
[task 2022-07-04T12:56:05.725Z] 12:56:05     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/libdav1d'
[task 2022-07-04T12:56:05.726Z] 12:56:05     INFO -  media/libdav1d/16bd_recon_tmpl.o
[task 2022-07-04T12:56:05.731Z] 12:56:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang -std=gnu99 -o 16bd_recon_tmpl.o -c  -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -DDAV1D_API= -DSTACK_ALIGNMENT=16 -DWINAPI_NO_BUNDLED_LIBRARIES -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/media/libdav1d -I/builds/worker/workspace/obj-build/media/libdav1d -I/builds/worker/checkouts/gecko/third_party/dav1d -I/builds/worker/checkouts/gecko/third_party/dav1d/include -I/builds/worker/checkouts/gecko/third_party/dav1d/include/dav1d -I/builds/worker/checkouts/gecko/third_party/dav1d/src -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -ffunction-sections -fdata-sections -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wstring-conversion -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-psabi -Wthread-safety -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/16bd_recon_tmpl.o.pp   16bd_recon_tmpl.c
[task 2022-07-04T12:56:05.731Z] 12:56:05     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/media/libdav1d'
[task 2022-07-04T12:56:05.828Z] 12:56:05     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2022-07-04T12:56:05.828Z] 12:56:05     INFO -  media/ffvpx/libavcodec/av1dec.o
[task 2022-07-04T12:56:05.828Z] 12:56:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang -std=gnu99 -o av1dec.o -c  -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -D_USE_MATH_DEFINES -Dinline=__inline -DHAVE_AV_CONFIG_H -DASSERT_LEVEL=2 -I/builds/worker/checkouts/gecko/media/ffvpx/libavcodec -I/builds/worker/workspace/obj-build/media/ffvpx/libavcodec -I/builds/worker/checkouts/gecko/media/ffvpx -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -ffunction-sections -fdata-sections -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wstring-conversion -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-psabi -Wthread-safety -Wno-parentheses -Wno-pointer-sign -Wno-sign-compare -Wno-switch -Wno-type-limits -Wno-unused-function -Wno-deprecated-declarations -Wno-absolute-value -Wno-incompatible-pointer-types -Wno-string-conversion -Wno-visibility -include libavutil_visibility.h -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/av1dec.o.pp   /builds/worker/checkouts/gecko/media/ffvpx/libavcodec/av1dec.c
[task 2022-07-04T12:56:05.829Z] 12:56:05     INFO -  gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2022-07-04T12:56:05.859Z] 12:56:05     INFO -  gmake[4]: Entering directory '/builds/worker/workspace/obj-build/media/ffvpx/libavcodec'
[task 2022-07-04T12:56:05.859Z] 12:56:05     INFO -  media/ffvpx/libavcodec/allcodecs.o
[task 2022-07-04T12:56:05.861Z] 12:56:05     INFO -  /builds/worker/fetches/sccache/sccache /builds/worker/fetches/clang/bin/x86_64-w64-mingw32-clang -std=gnu99 -o allcodecs.o -c  -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -ftrivial-auto-var-init=pattern -DDEBUG=1 -D_USE_MATH_DEFINES -Dinline=__inline -DHAVE_AV_CONFIG_H -DASSERT_LEVEL=2 -I/builds/worker/checkouts/gecko/media/ffvpx/libavcodec -I/builds/worker/workspace/obj-build/media/ffvpx/libavcodec -I/builds/worker/checkouts/gecko/media/ffvpx -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -include /builds/worker/workspace/obj-build/mozilla-config.h -DMOZILLA_CLIENT -Qunused-arguments -fcrash-diagnostics-dir=/builds/worker/artifacts -D_HAS_EXCEPTIONS=0 -ffunction-sections -fdata-sections -fno-math-errno -pipe -g -gcodeview -O2 -fno-omit-frame-pointer -funwind-tables -Qunused-arguments -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wclass-varargs -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wstring-conversion -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=backend-plugin -Wno-error=free-nonheap-object -Wno-error=return-std-move -Wno-error=atomic-alignment -Wno-error=deprecated-copy -Wno-unknown-pragmas -Wno-unused-function -Wno-conversion-null -Wno-switch -Wno-enum-compare -Wno-gnu-zero-variadic-macro-arguments -Werror=implicit-function-declaration -Wno-psabi -Wthread-safety -Wno-parentheses -Wno-pointer-sign -Wno-sign-compare -Wno-switch -Wno-type-limits -Wno-unused-function -Wno-deprecated-declarations -Wno-absolute-value -Wno-incompatible-pointer-types -Wno-string-conversion -Wno-visibility -include libavutil_visibility.h -fno-strict-aliasing -ffp-contract=off  -MD -MP -MF .deps/allcodecs.o.pp   /builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c
[task 2022-07-04T12:56:05.862Z] 12:56:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavcodec/allcodecs.c:28:
[task 2022-07-04T12:56:05.862Z] 12:56:05     INFO -  In file included from /builds/worker/checkouts/gecko/media/ffvpx/libavutil/thread.h:146:
[task 2022-07-04T12:56:05.862Z] 12:56:05  WARNING -  /builds/worker/checkouts/gecko/media/ffvpx/compat/w32pthreads.h:38:9: warning: 'WIN32_LEAN_AND_MEAN' macro redefined [-Wmacro-redefined]
[task 2022-07-04T12:56:05.863Z] 12:56:05     INFO -  #define WIN32_LEAN_AND_MEAN
[task 2022-07-04T12:56:05.863Z] 12:56:05     INFO -          ^
[task 2022-07-04T12:56:05.863Z] 12:56:05     INFO -  /builds/worker/workspace/obj-build/mozilla-config.h:158:9: note: previous definition is here
[task 2022-07-04T12:56:05.863Z] 12:56:05     INFO -  #define WIN32_LEAN_AND_MEAN 1
Flags: needinfo?(kershaw)
Summary: Intermittent [tier 2] /builds/worker/checkouts/gecko/netwerk/base/nsServerSocket.cpp:22:12: fatal error: 'Winsock2.h' file not found → Perma [tier 2] /builds/worker/checkouts/gecko/netwerk/base/nsServerSocket.cpp:22:12: fatal error: 'Winsock2.h' file not found
Summary: Perma [tier 2] /builds/worker/checkouts/gecko/netwerk/base/nsServerSocket.cpp:22:12: fatal error: 'Winsock2.h' file not found → Perma Mingw-clang [tier 2] /builds/worker/checkouts/gecko/netwerk/base/nsServerSocket.cpp:22:12: fatal error: 'Winsock2.h' file not found

Set release status flags based on info from the regressing bug 1770019

On mingw32 platform, the header name should be lower case

Assignee: nobody → kershaw
Status: NEW → ASSIGNED
Flags: needinfo?(kershaw)
Priority: -- → P2
Whiteboard: [stockwell needswork:owner] → [stockwell needswork:owner][necko-triaged]
Pushed by kjang@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/e0a58b7479c4 Fix the header name, r=necko-reviewers,dragana
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 104 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: