Bug 1777968 - Fix the header name, r=necko-reviewers,dragana

On mingw32 platform, the header name should be lower case

Differential Revision: https://phabricator.services.mozilla.com/D151110